<resources>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="cmenu_del">Delete file</string>
    <string name="cmenu_share">Send file</string>
    <string name="cmenu_setstd">Set as default</string>
    <string name="cmenu_remstd">Remove default</string>
    <string name="cmenu_info">Show file information</string>
    <string name="cmenu_nav">Start navigation</string>
    <string name="cmenu_filter">Filter properties</string>
    <string name="cmenu_legende">Show symbol legend</string>
    <string name="social_headline">Send file via</string>
    <string name="social_subject">A Roommate file</string>
    <string name="social_body">A Roommate file was shared with you (-:\n\n You can find more information under:\nhttp://www.roommateapp.info</string>
    <string name="info_roominfo">Room information</string>
    <string name="info_exception">Additional booking</string>
    <string name="info_version">File version</string>
    <string name="info_latCoordinate">Coordinate lat</string>
    <string name="info_lngCoordinate">Coordinate lng</string>
    <string name="info_semester">Semester</string>
    <string name="info_state">State</string>
    <string name="info_publicbuilding">Public Roommate file</string>
    <string name="info_filename">Filename</string>
    <string name="info_roomcount">Room count</string>
    <string name="cmenu_delMsg1">Do you want to delete the file</string>
    <string name="cmenu_delMsg2">\?</string>
    <string name="cmenu_delsuccess">was removed.</string>
    <string name="cmenu_hl">Process</string>
    <string name="menu_addfile">Add Roommate-File</string>
    <string name="nav_noappfound">No installed app on your device can perform this action. Please consider installing a third-party navigation application.</string>
    <string name="filter_info">Information</string>
	<string name="filter_whiteboard">Whiteboard</string>
    <string name="filter_power">Power supply</string>
	<string name="filter_network">LAN-Port</string>
	<string name="filter_pc">PC\'s</string>
    <string name="filter_projector">Projector</string>
	<string name="filter_beamer">Beamer</string>
	<string name="filter_msgP1">The room capacity shall be at least contain</string>
	<string name="filter_msgP2">seats.</string>
	<string name="legend_hl">Symbol-legend</string>
    <string name="legend_lectureCount">Count of free lectures</string>
    <string name="legend_roomSize">Roomsize</string>
    <string name="legend_info">Information deposited</string>
    <string name="legend_beamer">Beamer available</string>
    <string name="legend_projector">Projektor available</string>
    <string name="legend_whiteboard">Whiteboard available</string>
    <string name="legend_power">Power supply available</string>
    <string name="legend_network">LAN-Port available</string>
    <string name="legend_pc">PC\'s available</string>
    <string name="title_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="title_account">User account</string>
    <string name="eingabeEmail">E-Mail Address</string>
    <string name="passwort">Password</string>
    <string name="remember">save</string>
    <string name="login">check</string>
    <string name="exchange">exchange</string>
    <string name="manuellExchange">manuell</string>
    <string name="check4updates">Searching for a Roommate update</string>
    <string name="title_regularSettings">Common preferences</string>
    <string name="holdidaycheck">Check for holidays</string>
    <string name="no_valid_email">Please enter your account data.</string>
    <string name="dl_holidayfile_question">Would you like to download the holiday list for Germany?</string>
	<string name="exchange_nofiles_hl">No files were found</string>
    <string name="exchange_nofiles_msg">No Roommate-files found for synchronization.</string>
	<string name="info_settings_account">Connect the Roommate-App with your online account on roommateapp.info for syncing with your files.</string>
    <string name="info_settings_sync">Transfer your files to your app. No online account necessary for public Buildingfiles.</string>
    <string name="auto_sync">automatic sync</string>
    <string name="dialog_fire_missiles">Please enter a valid user account for this function.</string>
    <string name="msg_up2date">The Roommate app installation is up to date.</string>
    <string name="title_signup">Login</string>
    <string name="msg_signupFailed">Login failed!</string>
    <string name="msg_signupSuccess">Login was successful!</string>
    <string name="msg_signupCheck">Checking login</string>
    <string name="update_available">is available.\nDo you want to download the update now?</string>
    <string name="title_sync">Synchronisation</string>
    <string name="btn_sync">Sync now</string>
    <string name="all_files_updated_ok">All files were updated successfully</string>
    <string name="dialog_selectFiles">Select files</string>
    <string name="title_update">Update status</string>
    <string name="msg_nofileupdates">No updates available</string>
    <string name="msg_justpublicfiles">Failed to login. Only public Buildingfiles are displayed.</string>
    <string name="title_updated">Update</string>
    <string name="title_updatedError">Update error</string>
    <string name="msg_updateError">An error occurred while updating the files</string>
    <string name="msg_update">All files successfully updated</string>
    <string name="msg_publicfilesError">Could not reach the public Buildingfiles. Operation cannot continue!</string>
    <string name="msg_updateErrorPublic">Failed to update a public Buildingfile</string>
    <string name="msg_updateSuccess">Update successful</string>
    <string name="msg_needSD">To download Roommate-files it requieres a SD-Card.</string>
    <string name="title_publicfiles">Public files</string>
    <string name="publicfiles_disclaimer_hl">Note</string>
    <string name="publicfiles_disclaimer">Public Buildingfiles are created and managed by the community and are freely available for everyone. Those information is supplied without liability.</string>
    <string name="title_addfile">Roommate-File</string>
    <string name="warning_unknownurl">This URL follows to a unknown homepage. Do you want to proceed?</string>
    <string name="infoAddFile">You can easily create new builing files on roommateapp.info and send them to your Roommate-App on our online-editor.</string>
    <string name="title_enterurl">Enter URL</string>
    <string name="download">download</string>
    <string name="Download">Download</string>
    <string name="scan_qr">scan QR-Code</string>
    <string name="downloading">downloading</string>
    <string name="info_addfile_sync">If you already have an online account and you want to sync your files.\nNo problem! Simply click here.</string>
    <string name="btn_publicfiles">Show files</string>
    <string name="warning_hl">Warning</string>
    <string name="msg_publicfiles">Download public Buildingfiles directly from roommateapp.info\n</string>
    <string name="msg_downloadSuccess">Download successful.</string>
    <string name="msg_downloadFailed">Download failed.</string>
    <string name="msg_novalidfile">Not a valid Roommate file</string>
    <string name="pleaseWait">Please wait</string>
    <string name="noFilesSelected">No Files have been selected</string>
    <string name="wrong_url">Pleas enter a valid URL.</string>
    <string name="title_about">About Roommate</string>
    <string name="aboutURL">www.rooommateapp.info</string>
    <string name="title_version">Version</string>
    <string name="title_details">Details</string>
    <string name="title_credits">Contributors</string>
    <string name="title_changelog">Changelog</string>
    <string name="title_licence">License</string>
    <string name="aboutCreators">Team Roommate SPIN/SPMI 2012, 2013</string>
    <string name="aboutThanksTo">Special thanks goes to</string>
    <string name="changelog1.0_p1">First release</string>
    <string name="changelog1.1_p1">Client Update Prüfer implementiert</string>
    <string name="changelog1.1_p2">Google+ and Facebook links added</string>
    <string name="changelog1.1_p3">Layout optimisation</string>
    <string name="changelog1.1_p4">Misc. optimisation</string>
    <string name="changelog1.2_p1">Downloader for public files added</string>
    <string name="changelog1.2_p2">Added reset button to the timepicker</string>
    <string name="changelog1.2_p3">Support for localisation</string>
    <string name="changelog1.2_p4">Published sourcecode on GitHub</string>
    <string name="changelog1.2_p5">Misc. optimisation</string>
    <string name="changelog1.2.5_p1">Hardwarekey Menu works now on older devices</string>
    <string name="changelog1.2.5_p2">Headlines of the activity is now clickable</string>
    <string name="changelog1.2.5_p3">Bugfixes for DateHelper and TimePicker</string>
    <string name="changelog1.2.5_p4">Deactivate holiday file list</string>
    <string name="changelog1.2.5_p5">Layout and program optimisation</string>
    <string name="novalidfile">The file isn\'t a valid Roommate file</string>
    <string name="dialog_file">File</string>
    <string name="dialog_version">Version</string>
    <string name="dialog_date">Date</string>
    <string name="dialog_building">Building</string>
    <string name="dialog_error">Error</string>
    <string name="dialog_close">Quit</string>
    <string name="question_open">Do you want to add this file to your Roommate?</string>
    <string name="title_buildinginfo">Builing information</string>
    <string name="filter_active">aktiv filter</string>
    <string name="hour">Lecture</string>
    <string name="msg_toolate">Jumped to the next day.</string>
    <string name="msg_wrongday">The next available day was choosed.</string>
    <string name="filtertitle">Choose what\'s going to be displayed</string>
    <string name="hl_weekdays">Weekdays</string>
    <string name="hl_lecture">Lecture pattern</string>
    <string name="filter_set">Filter</string>
    <string name="filter_reset">Reset</string>
    <string name="error_norooms">This building does not contain room data.</string>
    <string name="dl_holidayfile_hl">Download holidaylist</string>
    <string name="dl_holidayfile_txt">Your holidayfile is outdated.\n\nDo you want to update it now?</string>
    <string name="msg_at">At</string>
    <string name="msg_is">is</string>
    <string name="building_titleP1">Free Rooms</string>
    <string name="building_titleP2">Roomlist</string>
    <string name="room_sizeNA">N/A</string>
    <string name="msg_nofreeroomsfound">No free rooms found.</string>
    <string name="available">not reserved</string>
    <string name="error_damageddata">The selected room contains erroneous data. Please check the file.</string>
    <string name="introP1_hl">Find available rooms</string>
    <string name="introP1">Roommate allows you to keep track of available rooms within a building.\n\nWaste no time searching for available rooms and minimize the danger to interrupt lectures or similar events.\n\nSearch for rooms with specified properties and display the schedule plans at your convenience.</string>
    <string name="introP2_hl">Online editor</string>
    <string name="introP2_url">roommateapp.info</string>
    <string name="introP2">Find public Buildingfiles from the community on the official website and download them to your smartphone conveniently.\n\nTry the easy to use online editor to create your own Buildingfiles, which you can share with friends or the whole community.\n\nVisit us for the latest news and function updates at:</string>
</resources>