<?xml version="1.0" encoding="utf-8"?>

<!--
/*
 *  Roommate
 *  Copyright (C) 2012,2013 Roommate Team (info@roommateapp.info)
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    android:scrollbarStyle="insideInset" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bgtitlebar2"
        android:baselineAligned="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/favicontitlebar"
            android:layout_width="37dp"
            android:layout_height="37dp"
			android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/roommate"
            android:onClick="onClickGoToMain"
            android:src="@drawable/favtitlebar1" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickGoToAbout"
            android:text="@string/title_settings"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/background_main" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="horizontal|vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/settings_hl_general"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/line"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txt_settings_hl_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:background="#e8e8e8"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/title_regularSettings"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/text" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/box_filterHolidays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:onClick="onClickFilterHolidays"
                    android:text="@string/holdidaycheck"
                    android:textColor="@color/text" />

                <CheckBox
                    android:id="@+id/box_checkClientUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:onClick="onClickCheckClientUpdate"
                    android:text="@string/check4updates"
                    android:textColor="@color/text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/settings_hl_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/line"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txt_settings_hl_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:background="#e8e8e8"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/title_account"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/text" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txt_settings_infoaccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/info_settings_account"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text_info" />

                <EditText
                    android:id="@+id/etxt_eMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    android:text="@string/eingabeEmail"
                    android:textColor="@color/text" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/etxt_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:text="@string/passwort"
                    android:textColor="@color/text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" >

                    <CheckBox
                        android:id="@+id/box_remember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:onClick="onClickRemember"
                        android:text="@string/remember"
                        android:textColor="@color/text" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/btn_login"
                            android:layout_width="166dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|center_vertical"
                            android:onClick="onClickLogin"
                            android:text="@string/login"
                            android:textColor="@color/text_btn" />

                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/settings_hl_sync"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/line"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txt_settings_hl_sync"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:background="#e8e8e8"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/title_sync"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txt_settings_infosync"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_settings_sync"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/text_info" />

                    <CheckBox
                        android:id="@+id/box_autosync"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClickAutosync"
                        android:text="@string/auto_sync"
                        android:textColor="@color/text" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/btn_manuelExchange"
                            android:layout_width="166dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|center_vertical"
                            android:editable="false"
                            android:enabled="true"
                            android:onClick="onClickManuelExchange"
                            android:text="@string/manuellExchange"
                            android:textColor="@color/text_btn" />

                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>